# packagekit-zbus

./: .gitignore  .gitmodules  Cargo.toml  README.md  generate.sh  package-kit-glib-sys.toml
package-kit-glib-sys/: Cargo.toml  build.rs
package-kit-glib-sys/src/: lib.rs
package-kit-glib-sys/tests/: abi.rs  constant.c  layout.c
packagekit/: Cargo.toml  Gir.toml  comments.md
packagekit/src/: lib.rs
packagekit/src/auto/: alias.rs  category.rs  client.rs  client_helper.rs  control.rs  desktop.rs  details.rs  distro_upgrade.rs  enums.rs  error.rs  eula_required.rs  files.rs  flags.rs  functions.rs  item_progress.rs  media_change_required.rs  mod.rs  package.rs  package_sack.rs  progress.rs  repo_detail.rs  repo_signature_required.rs  require_restart.rs  results.rs  source.rs  task.rs  transaction_list.rs  transaction_past.rs  update_detail.rs
src/: Offline.rs  PackageKit.rs  Transaction.rs  lib.rs  offline.rs  package_kit.rs  transaction.rs
