[package]
name = "packagekit"
version = "0.0.1"
edition = "2021"

[lib]
name = "packagekit"

[dependencies]
bitflags = "1"
ffi = { package = "package-kit-glib-sys", path = "../package-kit-glib-sys" }
gio = { git = "https://github.com/gtk-rs/gtk-rs-core" }
glib = { git = "https://github.com/gtk-rs/gtk-rs-core" }
libc = "0.2"

[features]
default = ["v1_2_5"]
v0_5 = ["ffi/v0_5"]
v0_5_2 = ["ffi/v0_5_2", "v0_5"]
v0_5_3 = ["ffi/v0_5_3", "v0_5_2"]
v0_5_4 = ["ffi/v0_5_4", "v0_5_3"]
v0_5_5 = ["ffi/v0_5_5", "v0_5_4"]
v0_6 = ["ffi/v0_6", "v0_5_5"]
v0_6_1 = ["ffi/v0_6_1", "v0_6"]
v0_6_2 = ["ffi/v0_6_2", "v0_6_1"]
v0_6_3 = ["ffi/v0_6_3", "v0_6_2"]
v0_6_4 = ["ffi/v0_6_4", "v0_6_3"]
v0_6_5 = ["ffi/v0_6_5", "v0_6_4"]
v0_6_10 = ["ffi/v0_6_10", "v0_6_5"]
v0_6_11 = ["ffi/v0_6_11", "v0_6_10"]
v0_6_13 = ["ffi/v0_6_13", "v0_6_11"]
v0_7_2 = ["ffi/v0_7_2", "v0_6_13"]
v0_7_5 = ["ffi/v0_7_5", "v0_7_2"]
v0_8 = ["ffi/v0_8", "v0_7_5"]
v0_8_1 = ["ffi/v0_8_1", "v0_8"]
v0_8_2 = ["ffi/v0_8_2", "v0_8_1"]
v0_8_6 = ["ffi/v0_8_6", "v0_8_2"]
v0_8_8 = ["ffi/v0_8_8", "v0_8_6"]
v0_8_11 = ["ffi/v0_8_11", "v0_8_8"]
v0_8_12 = ["ffi/v0_8_12", "v0_8_11"]
v0_8_14 = ["ffi/v0_8_14", "v0_8_12"]
v0_8_16 = ["ffi/v0_8_16", "v0_8_14"]
v0_8_17 = ["ffi/v0_8_17", "v0_8_16"]
v0_9_1 = ["ffi/v0_9_1", "v0_8_17"]
v0_9_5 = ["ffi/v0_9_5", "v0_9_1"]
v0_9_6 = ["ffi/v0_9_6", "v0_9_5"]
v1_0_2 = ["ffi/v1_0_2", "v0_9_6"]
v1_0_10 = ["ffi/v1_0_10", "v1_0_2"]
v1_0_12 = ["ffi/v1_0_12", "v1_0_10"]
v1_1_2 = ["ffi/v1_1_2", "v1_0_12"]
v1_1_8 = ["ffi/v1_1_8", "v1_1_2"]
v1_1_13 = ["ffi/v1_1_13", "v1_1_8"]
v1_2_4 = ["ffi/v1_2_4", "v1_1_13"]
v1_2_5 = ["ffi/v1_2_5", "v1_2_4"]
